# jk-bms-monitor

./: .gitignore  PLAY_STORE_LISTING.md  PRIVACY.md  README-vi.md  README.md
android/: buid.md  generate_keystore.sh  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/jkbms/monitor/: BmsApplication.kt  MainActivity.kt
android/app/src/main/java/com/jkbms/monitor/service/: BmsForegroundService.kt
android/app/src/main/java/com/jkbms/monitor/ui/: BmsViewModel.kt  DeviceDetailScreen.kt  ScanScreen.kt
android/app/src/main/java/com/jkbms/monitor/ui/theme/: Theme.kt
android/app/src/main/java/com/jkbms/monitor/widget/: BmsWidget.kt
android/app/src/main/java/com/jkbms/monitor/worker/: BmsRefreshWorker.kt  BmsWorkScheduler.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: bms_widget_info.xml
android/bmslib/: build.gradle.kts
android/bmslib/src/main/: rust
android/bmslib/src/main/cpp/: CMakeLists.txt  dummy.cpp
android/bmslib/src/main/java/com/jkbms/monitor/ble/: BleConnection.kt  BleScanner.kt
android/bmslib/src/main/java/com/jkbms/monitor/data/: BmsDataStore.kt  BmsRepository.kt
android/bmslib/src/main/java/uniffi/jkbms_protocol/: jkbms_protocol.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml  rust-toolchain.toml
rust/jkbms-protocol/: Cargo.toml
rust/jkbms-protocol/src/: error.rs  lib.rs  protocol.rs  types.rs  utils.rs
