[workspace]
members = [
    "jkbms-protocol",
    "uniffi-bindgen",
]
resolver = "2"

[workspace.dependencies]
uniffi = "0.29"

[profile.release]
opt-level = "z"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
incremental = false
codegen-units = 1

[profile.android-dev]
inherits = "dev"
