[package]
name = "jkbms-protocol"
version = "0.1.0"
edition = "2021"
description = "JK BMS protocol parser for Android BLE communication"

[lib]
name = "jkbms_protocol"
crate-type = ["staticlib", "cdylib", "lib"]

[features]
default = ["android"]
android = ["uniffi"]

[dependencies]
uniffi = { workspace = true, optional = true }
thiserror = "2"

[dev-dependencies]
pretty-hex = "0.4"
